--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Interface toggle</title>
+  <style src="switch.css"></style>
+</head>
+<body>
+  Hello world!
 
-  </body>
-</html><!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Interface toggle</title>
-  </head>
-  <body>
-Hello world!
-  </body>
+  <div class="onoffswitch">
+    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+    <label class="onoffswitch-label" for="myonoffswitch">
+      <span class="onoffswitch-inner"></span>
+      <span class="onoffswitch-switch"></span>
+    </label>
+  </div>
+</body>
 </html>
