--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Interface toggle</title>
-  <style src="switch.css"></style>
+  <link rel="stylesheet" type="text/css" href="switch.css">
 </head>
 <body>
   Hello world!
