--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@ function toggle(status){
   console.log("new value is: " + status.checked);
 }
 
-ifacectl.get("int1", function(){
+iface.get("int1", function(){
   console.log("got results");
 })
 
