--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   Hello world!
 
   <div class="onoffswitch">
-    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" onclick="toggle(this);" checked>
+    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="ifacetoggle" onclick="toggle(this);" checked>
     <label class="onoffswitch-label" for="myonoffswitch">
       <span class="onoffswitch-inner"></span>
       <span class="onoffswitch-switch"></span>
@@ -24,6 +24,7 @@ function toggle(status){
   console.log("new value is: " + status.checked);
 }
 
+// get initial interface state, and set state of iface toggle switch
 iface.get("int1", function(err, results){
   if (err) {
     console.log("got error");
@@ -31,6 +32,11 @@ iface.get("int1", function(err, results){
   } else {
     console.log("got results");
     console.log(results);
+    if (results.state == "up") {
+      document.getElementById("ifacetoggle").checked = true;
+    } else if (results.state == "down") {
+      document.getElementById("ifacetoggle").checked = true;
+    }
   }
 })
 
