--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@ iface.get("int1", function(err, results){
     if (results.state == "up") {
       document.getElementById("ifacetoggle").checked = true;
     } else if (results.state == "down") {
-      document.getElementById("ifacetoggle").checked = true;
+      document.getElementById("ifacetoggle").checked = false;
     }
   }
 })
