--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@ function toggle(status){
   }
 }
 
-// get initial interface state, and set state of iface toggle switch
+/* get initial interface state, and set state of iface toggle switch
 iface.get("int1", function(err, results){
   if (err) {
     console.log("got error");
@@ -67,6 +67,6 @@ iface.get("int1", function(err, results){
     }
   }
 })
-
+*/
 </script>
 </html>
