--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,9 @@ function toggle(status){
       } else {
         console.log("got results");
         console.log(results);
-        if (results.state == "up") {
+        if (results.state === "up") {
           document.getElementById("ifacetoggle").checked = true;
-        } else if (results.state == "down") {
+        } else if (results.state === "down") {
           document.getElementById("ifacetoggle").checked = false;
         }
       }
@@ -42,9 +42,9 @@ function toggle(status){
       } else {
         console.log("got results");
         console.log(results);
-        if (results.state == "up") {
+        if (results.state === "up") {
           document.getElementById("ifacetoggle").checked = true;
-        } else if (results.state == "down") {
+        } else if (results.state === "down") {
           document.getElementById("ifacetoggle").checked = false;
         }
       }
@@ -60,11 +60,13 @@ iface.get("int1", function(err, results){
   } else {
     console.log("got results");
     console.log(results);
+    /*
     if (results.state == "up") {
       document.getElementById("ifacetoggle").checked = true;
     } else if (results.state == "down") {
       document.getElementById("ifacetoggle").checked = false;
     }
+    */
   }
 })
 
