--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="onoffswitch">
     <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="ifacetoggle" onclick="toggle(this);" checked>
-    <label class="onoffswitch-label" for="myonoffswitch">
+    <label class="onoffswitch-label" for="ifacetoggle">
       <span class="onoffswitch-inner"></span>
       <span class="onoffswitch-switch"></span>
     </label>
